Fixed background and other layout issues that prevented the forms from displaying properly on smaller mobile devices

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -3,7 +3,7 @@
 .main-block {
 	margin: auto;
 	padding: 10px;
-	display: block;
+	display: table;
 	position: relative;
 	text-align: center;
 	border: 2px solid #000;
