--- a/styles/main.css
+++ b/styles/main.css
@@ -3,20 +3,13 @@
 html, body {
   height: 100%;
   width: 100%;
+  margin: auto;
   text-align: center;
-}
-
-html {
-    display: table;
-    margin: auto;
-}
-
-#gradient {
-  min-height: 100%;
-  width: 100%;
-  position: absolute;
-  background: -webkit-linear-gradient(left top, rgba(26,85,131,1), rgba(55,180,200,.7)); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(bottom right, rgba(26,85,131,1), rgba(55,180,200,.7)); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(bottom right, rgba(26,85,131,1), rgba(55,180,200,.7)); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(to bottom right, rgba(26,85,131,1), rgba(55,180,200,.7)); /* Standard syntax (must be last) */
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-image: -webkit-linear-gradient(left top, rgba(26,85,131,1), rgba(55,180,200,.7)); /* For Safari 5.1 to 6.0 */
+  background-image: -o-linear-gradient(bottom right, rgba(26,85,131,1), rgba(55,180,200,.7)); /* For Opera 11.1 to 12.0 */
+  background-image: -moz-linear-gradient(bottom right, rgba(26,85,131,1), rgba(55,180,200,.7)); /* For Firefox 3.6 to 15 */
+  background-image: linear-gradient(to bottom right, rgba(26,85,131,1), rgba(55,180,200,.7)); /* Standard syntax (must be last) */
 }
